syntax = "proto3";

package vangogh.api.proto.base;
option go_package = "vangogh_api_proto_base";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message VangoghExtension {
  string name = 1;
  google.protobuf.Any extension = 2;
};

message Blog {
  BlogMetadata metadata = 1;
  repeated Post posts = 2;
};

message BlogMetadata {
  reserved 1 to 99;

  VangoghExtension extension = 100;
};

message Post {
  PostMetadata metadata = 1;
  PostData data = 2;
};

message PostMetadata {
  google.protobuf.Timestamp publish_timestamp = 1;
  string title = 2;
  string author = 3;
  repeated string tags = 4;

  reserved 5 to 99;

  VangoghExtension extension = 100;
};

message PostData {
  string photo_url = 1;
  string text = 2;

  reserved 3 to 99;

  VangoghExtension extension = 100;
};
