syntax = "proto3";

package vangogh.core.proto.extension;
option go_package = "vangogh_core_proto_extension";

import "google/protobuf/any.proto";
import "lib/proto/blog.proto";

message PostMetadataExtension {
  bool is_static = 1;
  vangogh.proto.VangoghExtension extension = 2;
}
